<resources>
    <string name="app_name">Pomodro Timer</string>
    <string name="temp">25:00</string>
    <string name="startAndStop">Start</string>
    <string name="resumeAndStop">Reset</string>
    <string name="timer">Timer</string>
    <string name="task">Task</string>
    <string name="noOfTask">0</string>
    <string name="fixedTask">/4</string>
    <string name="stop">Stop</string>
</resources>